--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,6 +1,5 @@
 <div>
-  <h2>Grocery list manager</h2>
-  <h2>Keep Note</h2>
+    <h2>Keep Note</h2>
 
   <div class="row">
     <div class="col-xs-6 col-md-4">
@@ -24,7 +23,19 @@
 
   <ul class="list-group">
     <li *ngFor="let task of tasks" class="list-group-item">
-      <span> {{ task.name }} </span>
+      <mat-checkbox class='checkbox'(change)="OnChange(this.task.name ,$event)">{{ task.name }}</mat-checkbox>
     </li>
   </ul>
+</div>
+
+
+<div>
+<hr>
+<ul class="list-group"id='Test' style="display: none;">
+    <li *ngFor="let checkedItem of checkedItems" class="list-group-item"  >
+      <mat-checkbox >{{ checkedItem}}</mat-checkbox>
+    </li>
+  </ul>
+<!-- <div>{{checkedItem}}</div> -->
+
 </div>
