need more formatting

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -48,7 +48,7 @@
   <hr />
 
   <ul class="list-group" id="CheckListBlock" style="display: none;">
-    <h5>Checked Items</h5>
+    <mat-icon matPrefix>expand_more</mat-icon><span>Checked Items</span>
     <li *ngFor="let checkedItem of checkedItems" class="list-group-item list-group-item-action">
       <mat-checkbox
         indeterminate="“true”"
