--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,60 +1,73 @@
-<div>
-  <h2>Keep Note</h2>
-
-  <div class="row">
-    <div class="col-xs-6 col-md-4">
-      <div class="input-group">
-        <input
-          id="myInput"
-          type="text"
-          class="form-control textbox"
-          required
-          minlength="2"
-          placeholder="enter grocery items"
-          [(ngModel)]="task"
-          [formControl]="inputName"
-        />
-        <div class="input-group-btn">
-          <button
-            id="myBtn"
-            class="btn btn-outline-danger btn-sm"
-            type="submit"
-            (click)="onClick()"
-          >
-            <mat-icon>done</mat-icon>
-          </button>
+<div class="container">
+  <h2 id='h2id'>Keep Note</h2>
+  <div class='inputBoxContent'>
+    <div class="row " style="display: inherit">
+      <div class="col-xs-6 col-md-4 "style="display:inline-block;">
+        <div class="input-group">
+          <input
+            id="myInput"
+            type="text"
+            class="form-control textbox"
+            required
+            minlength="2"
+            placeholder="enter grocery items"
+            [(ngModel)]="task"
+            [formControl]="inputName"
+          />
+          <div class="input-group-btn">
+            <button
+              id="myBtn"
+              class="btn btn-outline-danger btn-sm"
+              type="submit"
+              (click)="onClick()"
+            >
+              <mat-icon>done</mat-icon>
+            </button>
+          </div>
         </div>
       </div>
     </div>
+    <!-- Input Validation -->
+    <mat-hint *ngIf="!task">Start Listing ...</mat-hint>
+    <mat-hint *ngIf="inputName.hasError('minlength')"
+      >Type more than 2</mat-hint
+    >
   </div>
-  <mat-hint *ngIf="!task">Type Something</mat-hint>
-  <mat-hint *ngIf="inputName.hasError('minlength')">Type more than 2</mat-hint>
   <br />
-  <br/>
-
+  <br />
+  <!-- listing the entered Items -->
   <ul class="list-group">
-    <li *ngFor="let task of tasks" class="list-group-item list-group-item-action">
+    <li
+      *ngFor="let task of tasks"
+      class="list-group-item list-group-item-action"
+    >
       <mat-checkbox
         class="checkbox"
         (change)="OnChange(this.task.name, $event)"
         >{{ task.name }}</mat-checkbox
       >
-      <button class="btn btn-light" (click)="delete(this.task)"> <mat-icon>close</mat-icon></button>
+      <button class="btn btn-light deletebtn" (click)="delete(this.task)">
+        <span><mat-icon>close</mat-icon></span>
+      </button>
     </li>
   </ul>
-</div>
 
-<div>
-  <hr />
-
-  <ul class="list-group" id="CheckListBlock" style="display: none;">
-    <mat-icon matPrefix>expand_more</mat-icon><span>Checked Items</span>
-    <li *ngFor="let checkedItem of checkedItems" class="list-group-item list-group-item-action">
-      <mat-checkbox
-        indeterminate="“true”"
-        (change)="OnindeterminateChange(this.checkedItem, $event)"
-        ><del>{{ checkedItem }}</del></mat-checkbox
+  <div>
+    <hr />
+    <!-- Display checked Item -->
+    <ul class="list-group" id="CheckListBlock" style="display: none;">
+      <mat-icon matPrefix>expand_more</mat-icon
+      ><span>Checked Items</span>
+      <li
+        *ngFor="let checkedItem of checkedItems"
+        class="list-group-item list-group-item-action"
       >
-    </li>
-  </ul>
+        <mat-checkbox
+          indeterminate="“true”"
+          (change)="OnindeterminateChange(this.checkedItem, $event)"
+          ><del>{{ checkedItem }}</del></mat-checkbox
+        >
+      </li>
+    </ul>
+  </div>
 </div>
