--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -12,8 +12,12 @@
 }
 #h2id {
   text-align: center;
-  margin-bottom: 2.5rem; 
+  margin-bottom: 2.5rem;
 }
-.deletebtn{
+.deletebtn {
   float: right;
+}
+
+.checkbox {
+  white-space: normal;
 }
