--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -1,6 +1,3 @@
-.textbox {
-  margin-right: 5px;
-}
 .container {
   align-items: center;
 }
@@ -14,10 +11,22 @@
   text-align: center;
   margin-bottom: 2.5rem;
 }
+
+.textbox {
+  margin-right: 5px;
+}
+
 .deletebtn {
   float: right;
 }
 
 .checkbox {
   white-space: normal;
+}
+.Archivedtag {
+  font-family: serif;
+  text-shadow: inherit;
+  color: #6d7278;
+  margin-bottom: 15px;
+  padding-left: 10px;
 }
