resolved the deletion issue

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -45,7 +45,7 @@
       </mat-checkbox>
       <button
         class="btn btn-light deletebtn"
-        (click)="deleteListItem(this.task)"
+        (click)="deleteListItem(this.task.name)"
       >
         <mat-icon>close</mat-icon>
       </button>
